--- a/summarizer.ipynb
+++ b/summarizer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,25 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No model was supplied, defaulted to t5-small (https://huggingface.co/t5-small)\n",
-      "Downloading: 100%|██████████| 1.17k/1.17k [00:00<00:00, 136kB/s]\n",
-      "Downloading: 100%|██████████| 231M/231M [00:08<00:00, 29.4MB/s] \n",
-      "2022-03-01 23:02:08.076838: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-03-01 23:02:08.153947: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
-      "All model checkpoint layers were used when initializing TFT5ForConditionalGeneration.\n",
-      "\n",
-      "All the layers of TFT5ForConditionalGeneration were initialized from the model checkpoint at t5-small.\n",
-      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFT5ForConditionalGeneration for predictions without further training.\n",
-      "Downloading: 100%|██████████| 773k/773k [00:03<00:00, 245kB/s]  \n",
-      "Downloading: 100%|██████████| 1.32M/1.32M [00:04<00:00, 308kB/s] \n"
+      "No model was supplied, defaulted to sshleifer/distilbart-cnn-12-6 (https://huggingface.co/sshleifer/distilbart-cnn-12-6)\n",
+      "Downloading: 100%|██████████| 1.76k/1.76k [00:00<00:00, 383kB/s]\n",
+      "Downloading: 100%|██████████| 1.14G/1.14G [00:35<00:00, 34.5MB/s]\n",
+      "Downloading: 100%|██████████| 26.0/26.0 [00:00<00:00, 8.12kB/s]\n",
+      "Downloading: 100%|██████████| 878k/878k [01:03<00:00, 14.0kB/s] \n",
+      "Downloading: 100%|██████████| 446k/446k [00:01<00:00, 295kB/s]  \n"
      ]
     }
    ],
@@ -69,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'nLP combines computational linguistics with statistical, machine learning, and deep learning models . these technologies enable computers to process human language in the form of text or voice data and to ‘understand’ its full meaning, complete with the speaker or writer’s intent and sentiment .'"
+       "' Natural language processing (NLP) refers to the branch of computer science concerned with giving computers the ability to understand text and spoken words in much the same way human beings can . NLP drives computer programs that translate text from one language to another .'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,6 +93,123 @@
    "source": [
     "summary = summarizer(article,max_length=130,min_length=30,do_sample=False)\n",
     "summary[0]['summary_text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%pip install gradio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summary(sentence):\n",
+    "    summary = summarizer(sentence,max_length=130,min_length=30,do_sample=False)\n",
+    "    return summary[0]['summary_text'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_inputs = gr.inputs.Textbox(lines=4, placeholder=\"Enter sentence here...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface = gr.Interface(fn=summary, \n",
+    "                        inputs=app_inputs,\n",
+    "                         outputs='text', \n",
+    "                        title='Sup, I\\'m Summarizer')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7860/\n",
+      "Running on public URL: https://53357.gradio.app\n",
+      "\n",
+      "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"500\"\n",
+       "            src=\"https://53357.gradio.app\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7feddf559940>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<fastapi.applications.FastAPI at 0x7feddf6effa0>,\n",
+       " 'http://127.0.0.1:7860/',\n",
+       " 'https://53357.gradio.app')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 130, but you input_length is only 7. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface.launch(share=True)"
    ]
   }
  ],
